tests/errors/001-tokenization/001-unclosed-string-literal.xxx
a := 1
x : string = "This is an unclosed string
b := 2
